<resources>
    <string name="app_name">鼠绘漫画ML</string>
    <string name="title_activity_login">漫画</string>

    <!-- Strings related to login -->
    <string name="prompt_email">登录邮箱</string>
    <string name="prompt_password">登录密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_reg_in">注册</string>

    <string name="reg_email">请输入常用邮箱</string>
    <string name="reg_password">请输入密码</string>
    <string name="reg_action_reg">确定注册</string>
    <string name="reg_action_back">返回登录</string>
    <string name="reg_accept">同意《使用协议》</string>
    <string name="circle_of_friend">漫友圈</string>
    <string name="setting">设置</string>
    <string name="options">意见反馈</string>
    <string name="about">关于</string>
    <string name="local_search">最近搜索</string>
    <string name="no_serarch">暂无搜索历史</string>
    <string name="search">搜索</string>
    <string name="jump">%1$d s 跳转</string>
    <string name="splash_tip">请输入需要翻译的文字内容或者网页地址</string>
    <string name="title_text">番外篇</string>
    <string name="title_activity_settings">设置</string>
    <string name="auther">作者:</string>
    <string name="hot">热度:%1$s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
