<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="@dimen/dp_10">

    <ImageView
        android:id="@+id/book_item_head"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_130"
        android:scaleType="fitXY"
        android:src="@drawable/loading"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auther"
                android:textColor="@color/comment_desc_color"
                />

            <TextView
                android:id="@+id/book_item_auther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:text="lsl"/>
        </LinearLayout>

        <TextView
            android:id="@+id/book_item_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/hot"
            android:textColor="@color/comment_desc_color"/>

        <TextView
            android:id="@+id/book_item_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/splash_tip"
            android:textColor="@color/game_title_txt_color"/>


    </LinearLayout>


</LinearLayout>