<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xi.lsl.cartoon.ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:background="@null">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/login_reg_btn"
            android:drawableLeft="@drawable/act_tips_icon"
            android:drawableStart="@drawable/act_tips_icon"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="#ff000000" />


        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/login_reg_btn"
            android:drawableLeft="@drawable/pwd_tips_icon"
            android:drawableStart="@drawable/pwd_tips_icon"
            android:hint="@string/reg_password"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="#ff000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/reg_check"
                style="@style/MyCheckBox"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_25"
                android:gravity="center_vertical"
                android:textColor="#ff4d4d4d"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_accept"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reg"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/login_btn"
                android:text="@string/reg_action_reg"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_45"
                android:background="@null" />

            <Button
                android:id="@+id/btn_back"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/login_reg_btn"
                android:text="@string/reg_action_back"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
