<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xi.lsl.cartoon.ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:background="@null">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/login_reg_btn"
            android:drawableLeft="@drawable/act_tips_icon"
            android:drawableStart="@drawable/act_tips_icon"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:text="408930131@qq.com"
            android:textColor="#ff000000" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/login_reg_btn"
            android:drawableLeft="@drawable/pwd_tips_icon"
            android:drawableStart="@drawable/pwd_tips_icon"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLength="25"
            android:maxLines="1"
            android:text="123456"
            android:textColor="#ff000000" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal">

            <Button

                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/login_btn"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_45"
                android:background="@null" />

            <Button
                android:id="@+id/btn_reg"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/login_reg_btn"
                android:text="@string/action_reg_in"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
